--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "connect-flash": "*",
-    "ejs": "*",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
     "express-messages": "*",
-    "express-session": "^1.17.0",
-    "express-validator": "^6.4.0",
-    "firebase-tools": "^7.14.0",
-    "fs-extra": "*",
-    "mongoose": "^5.9.3"
+    "express-session": "^1.17.1",
+    "express-validator": "^6.5.0",
+    "firebase-tools": "^7.16.2",
+    "fs-extra": "^9.0.0",
+    "mongoose": "^5.9.15"
   }
 }
